# exercism-scheduler

./: .editorconfig  .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  requirements.txt
database/: backup.sql  schema.sql  tracks.json
scheduler/: .editorconfig  cli.py  db.py  models.py  scheduler.py  utils.py
src/: __init__.py  __main__.py  db.py  helpers.py  scheduler.py  utils.py
src/commands/: export.py  generate.py  init.py  log.py  populate.py  report.py  status.py  sync.py  track.py
src/models/: track.py
src/scheduler/: __init__.py  __main__.py  constants.py  db.py  helpers.py  scheduler.py  seed.py
src/scheduler/commands/: export.py  generate.py  init.py  log.py  populate.py  report.py  status.py  sync.py  track.py
src/scheduler/database/: backup.sql
src/scheduler/migrations/: schema.sql
src/scheduler/models/: track.py
