[project]
    name = "scheduler"
    version = "2025.06.04"
    description = "Command-line scheduler tool for tracking and managing learning progress on Exercism"
    readme = "README.md"
    license-files = ["LICEN[CS]E*"]
    authors = [
        { name = "Prince Muel", email = "68931805+princemuel@users.noreply.github.com" },
    ]
    keywords = ["scheduler", "tracker", "learning", "progress"]
    classifiers = [
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
    ]
    requires-python = ">=3.13"
    dependencies = ["platformdirs>=4.3.8", "rich>=14.0.0", "typer>=0.16.0"]
    [project.optional-dependencies]
        dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
        test = ["pytest>=7.0", "pytest-cov"]
    [project.urls]
        Homepage = "https://github.com/princemuel/exercism-scheduler"
        Documentation = "https://github.com/princemuel/exercism-scheduler#readme"
        Repository = "https://github.com/princemuel/exercism-scheduler.git"
        "Bug Tracker" = "https://github.com/princemuel/exercism-scheduler/issues"
    [project.scripts]
        scheduler = "scheduler:main"
[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"
